--- a/OWDemo/OWDemo.csproj
+++ b/OWDemo/OWDemo.csproj
@@ -33,22 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PcapDotNet.Base, Version=1.0.3.20967, Culture=neutral, PublicKeyToken=4b6f3e583145a652, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pcap.Net.x86.1.0.3\lib\net40\PcapDotNet.Base.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PcapDotNet.Core, Version=1.0.3.20978, Culture=neutral, PublicKeyToken=4b6f3e583145a652, processorArchitecture=x86">
-      <HintPath>..\packages\Pcap.Net.x86.1.0.3\lib\net40\PcapDotNet.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PcapDotNet.Core.Extensions, Version=1.0.3.20980, Culture=neutral, PublicKeyToken=4b6f3e583145a652, processorArchitecture=x86">
-      <HintPath>..\packages\Pcap.Net.x86.1.0.3\lib\net40\PcapDotNet.Core.Extensions.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="PcapDotNet.Packets, Version=1.0.3.20968, Culture=neutral, PublicKeyToken=4b6f3e583145a652, processorArchitecture=MSIL">
-      <HintPath>..\packages\Pcap.Net.x86.1.0.3\lib\net40\PcapDotNet.Packets.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,7 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Pcap.Net.x64">
+      <Version>1.0.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
